fix dot content alignment

--- a/Chronicles of Darkness/CofD.css
+++ b/Chronicles of Darkness/CofD.css
@@ -838,8 +838,7 @@ input.sheet-flag + button.sheet-radio {
     height: 10px;
     padding: 0;
     border: solid 1px #000000;
-    vertical-align: middle;
-
+    line-height: 11px;
     background: #efefef;
 }
 
